zokrates_cli/examples/compile_errors/div_by_zero.zok
def main(field input) -> field:
    field divisor = if [input, 0] != [input, 1] then 0 else 1 fi
    return input / divisor